crud con ajuste en la página de inicio

--- a/cafenar/productos/templates/inicio.html
+++ b/cafenar/productos/templates/inicio.html
@@ -5,21 +5,13 @@
 {% block title %}Inicio - Sistema de Gestión de Productos{% endblock %}
 
 {% block header %}
-    <h2>Bienvenido al Sistema de Gestión de Productos</h2>
+    <h2>Bienvenido al Sistema de Gestión de Regstro de Usuarios y productos</h2>
 {% endblock %}
 
 {% block content %}
     <article>
-        <h2>¿Por qué lo usamos?</h2>
-        <p>Es un hecho establecido hace demasiado tiempo que un lector se 
-            distraerá con el contenido del texto de un sitio mientras que mira su diseño. 
-            El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal
-            de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, 
-            contenido aquí". Estos textos hacen parecerlo un español que se puede leer.
-             Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum 
-             como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" 
-             va a dar por resultado muchos sitios web que usan este texto si se 
-             encuentran en estado de desarrollo. 
+        <h2>¿Qué es el SGRU de CAFENAR?</h2>
+        <p>El sistema de registro de productores (usuarios) se ha diseñado con una amplia gama de funciones que permiten la gestión eficiente de roles de los distintos usuarios que adherirá la futura plataforma para comercialización de cacao y chocolate en el departamento de Nariño. Esta plataforma la ser un proyecto de software nuevo, se ha concebido como un desarrollo piloto, en el que se hará énfasis en la construcción del sistema de registro de productores. 
     </article>
     <aside>
         <!-- Espacio reservado para contenido adicional -->
